# awsim

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  docker-compose.yml  flake.nix
crates/awsim/: Cargo.toml  build.rs
crates/awsim-apigateway/: Cargo.toml
crates/awsim-apigateway/src/: authorizer.rs  lib.rs  proxy.rs  state.rs  util.rs  v1.rs  vtl.rs
crates/awsim-apigateway/src/operations/: apis.rs  deployments.rs  integrations.rs  mod.rs  routes.rs  stages.rs
crates/awsim-batch/: Cargo.toml
crates/awsim-batch/src/: error.rs  lib.rs  state.rs
crates/awsim-batch/src/operations/: compute.rs  jobs.rs  mod.rs  queues.rs
crates/awsim-bedrock/: Cargo.toml
crates/awsim-bedrock/catalog/: llm-providers.json
crates/awsim-bedrock/src/: aliases.rs  backend.rs  catalog.rs  config.rs  health.rs  lib.rs  management.rs  metrics.rs  model_map.rs  models.rs  runtime.rs  state.rs
crates/awsim-bedrock/src/runtime/: anthropic.rs  canned.rs  cohere.rs  cohere_embed.rs  converse.rs  llama.rs  mistral.rs  mod.rs  openai.rs  titan.rs  titan_embed.rs
crates/awsim-billing/: Cargo.toml
crates/awsim-billing/pricing/: apigateway.json  cloudfront.json  cognito-identity.json  cognito-idp.json  comprehend.json  dynamodb.json  ec2.json  ecr.json  events.json  firehose.json  kinesis.json  kms.json  lambda.json  logs.json  memorydb.json  monitoring.json  mq.json  polly.json  rds.json  route53.json  s3.json  secretsmanager.json  ses.json  sns.json  sqs.json  states.json
crates/awsim-billing/src/: lib.rs  meter.rs  pricing.rs  report.rs  state.rs
crates/awsim-chaos/: Cargo.toml
crates/awsim-chaos/src/: engine.rs  lib.rs  presets.rs  rule.rs
crates/awsim-cloudfront/: Cargo.toml
crates/awsim-cloudfront/src/: ids.rs  lib.rs  state.rs
crates/awsim-cloudfront/src/operations/: cache_policies.rs  distributions.rs  extras.rs  field_level_encryption.rs  functions.rs  invalidations.rs  key_groups.rs  (+8 more)
crates/awsim-cognito/: Cargo.toml
crates/awsim-cognito/src/: error.rs  federation.rs  identity.rs  jwt.rs  keys.rs  lib.rs  mock_idp.rs  oauth.rs  password.rs  saml.rs  secret_hash.rs  srp.rs  state.rs  totp.rs  well_known.rs
crates/awsim-comprehend/: Cargo.toml
crates/awsim-comprehend/src/: lib.rs
crates/awsim-conformance/: Cargo.toml
crates/awsim-conformance/src/: lib.rs  main.rs  runner.rs  server.rs  smithy.rs  smithy_errors.rs
crates/awsim-conformance/tests/: account_region_isolation.rs  arn_context_propagation.rs  aurora_lifecycle.rs  behavior_contract.rs  error_catalog.rs  s3_eventbridge_notification.rs  s3_notification_filter.rs  s3_post_object.rs  s3_select_object_content.rs  snapshot_round_trip.rs  tag_validation.rs
crates/awsim-core/: Cargo.toml
crates/awsim-core/src/: arn.rs  auth.rs  authz.rs  bearer_token.rs  body.rs  body_store.rs  error.rs  events.rs  gateway.rs  idempotency.rs  lib.rs  lifecycle.rs  pagination.rs  persistence.rs  protocol.rs  request_detail.rs  request_event.rs  router.rs  sigv4_verify.rs  state.rs  tags.rs  tick.rs  totp.rs
crates/awsim-core/tests/: authz_test.rs  body_store_gc_test.rs  resource_policy_test.rs  scp_test.rs
crates/awsim-dynamodb/: Cargo.toml
crates/awsim-dynamodb/migrations/: V1__init.sql  V2__lift_gsi_cap.sql
crates/awsim-dynamodb/src/: error.rs  keys.rs  lib.rs  sqlite_store.rs  state.rs  throttle.rs
crates/awsim-ecr/: Cargo.toml
crates/awsim-ecr/src/: authz.rs  error.rs  handler.rs  lib.rs  routes.rs  state.rs
crates/awsim-ecr/tests/: parity_replication.rs  persistence_test.rs
crates/awsim-enforcement-tests/: Cargo.toml
crates/awsim-enforcement-tests/src/: lib.rs  main.rs
crates/awsim-enforcement-tests/tests/: enforcement.rs  services.rs  sts_sessions.rs
crates/awsim-eventbridge/: Cargo.toml
crates/awsim-eventbridge/src/: handler.rs  lib.rs  state.rs  util.rs
crates/awsim-iam/: Cargo.toml
crates/awsim-iam-policy/: Cargo.toml
crates/awsim-iam-policy/src/: document.rs  error.rs  eval.rs  glob.rs  lib.rs
crates/awsim-iam-policy/tests/: evaluation.rs  parsing.rs
crates/awsim-iam/src/: authz.rs  error.rs  ids.rs  lib.rs  state.rs
crates/awsim-iam/tests/: limits.rs  policy_validation.rs
crates/awsim-kinesis/: Cargo.toml
crates/awsim-kinesis/src/: error.rs  handler.rs  lib.rs  sqlite_store.rs  state.rs  util.rs
crates/awsim-lambda/: Cargo.toml
crates/awsim-lambda/src/: authz.rs  error.rs  executor.rs  lib.rs  state.rs  util.rs
crates/awsim-lambda/tests/: persistence_test.rs
crates/awsim-opensearch/: Cargo.toml
crates/awsim-opensearch/src/: lib.rs  state.rs  util.rs
crates/awsim-qldb/: Cargo.toml
crates/awsim-qldb/src/: lib.rs
crates/awsim-rds-data/: Cargo.toml
crates/awsim-rds-data/src/: engine.rs  lib.rs  operations.rs  types.rs
crates/awsim-rds-data/tests/: integration.rs
crates/awsim-s3/: Cargo.toml
crates/awsim-s3/src/: authz.rs  body_store.rs  error.rs  lib.rs  state.rs  util.rs
crates/awsim-s3/tests/: persistence_test.rs
crates/awsim-secretsmanager/: Cargo.toml
crates/awsim-secretsmanager/src/: authz.rs  error.rs  lib.rs  state.rs  util.rs
crates/awsim-ses/: Cargo.toml
crates/awsim-ses/src/: lib.rs  sqlite_store.rs  state.rs
crates/awsim-sns/: Cargo.toml
crates/awsim-sns/src/: authz.rs  error.rs  filter.rs  handler.rs  http_envelope.rs  lib.rs  state.rs
crates/awsim-sqs/: Cargo.toml
crates/awsim-sqs/src/: authz.rs  error.rs  handler.rs  lib.rs  state.rs  util.rs
crates/awsim-sqs/tests/: parity_query_protocol.rs  periodic_gc_test.rs  persistence_test.rs  size_cap_test.rs
crates/awsim-sso-admin/: Cargo.toml
crates/awsim-sso-admin/src/: error.rs  lib.rs  state.rs
crates/awsim-sts/: Cargo.toml
crates/awsim-sts/src/: authz.rs  error.rs  lib.rs  sessions.rs
crates/awsim/src/: admin.rs  bill_cli.rs  chaos_cli.rs  integrations.rs  main.rs  named_snapshots.rs  operator_auth.rs  proxy.rs  runtime_config.rs  seed_cli.rs  snapshot_cli.rs  tls.rs  ui.rs
crates/awsim/tests/: sdk_tests.rs  sdk_tests_advanced.rs  sdk_tests_extended.rs  sse_events.rs  storage_endpoint.rs
(+1212 files in other folders)
