[workspace]
resolver = "3"
members = [
    "crates/awsim",
    "crates/awsim-apigateway",
    "crates/awsim-appsync",
    "crates/awsim-athena",
    "crates/awsim-bedrock",
    "crates/awsim-cloudformation",
    "crates/awsim-cloudfront",
    "crates/awsim-cloudwatch-logs",
    "crates/awsim-cognito",
    "crates/awsim-core",
    "crates/awsim-dynamodb",
    "crates/awsim-ec2",
    "crates/awsim-ecr",
    "crates/awsim-ecs",
    "crates/awsim-eventbridge",
    "crates/awsim-elb",
    "crates/awsim-glue",
    "crates/awsim-iam",
    "crates/awsim-rds",
    "crates/awsim-kinesis",
    "crates/awsim-kms",
    "crates/awsim-lambda",
    "crates/awsim-route53",
    "crates/awsim-cloudwatch-metrics",
    "crates/awsim-s3",
    "crates/awsim-secretsmanager",
    "crates/awsim-ses",
    "crates/awsim-sns",
    "crates/awsim-sqs",
    "crates/awsim-ssm",
    "crates/awsim-sts",
    "crates/awsim-stepfunctions",
    "crates/awsim-acm",
    "crates/awsim-waf",
    "crates/awsim-scheduler",
    "crates/awsim-comprehend",
    "crates/awsim-kendra",
    "crates/awsim-opensearch",
    "crates/awsim-iam-policy",
    "crates/awsim-organizations",
    "crates/awsim-cloudtrail",
    "crates/awsim-eks",
    "crates/awsim-firehose",
    "crates/awsim-batch",
    "crates/awsim-sso-admin",
    "crates/awsim-datasync",
    "crates/awsim-polly",
    "crates/awsim-conformance",
    "crates/awsim-enforcement-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QaidVoid/awsim"

[workspace.dependencies]
awsim-apigateway = { path = "crates/awsim-apigateway" }
awsim-appsync = { path = "crates/awsim-appsync" }
awsim-athena = { path = "crates/awsim-athena" }
awsim-bedrock = { path = "crates/awsim-bedrock" }
awsim-cloudformation = { path = "crates/awsim-cloudformation" }
awsim-cloudfront = { path = "crates/awsim-cloudfront" }
awsim-cloudwatch-logs = { path = "crates/awsim-cloudwatch-logs" }
awsim-cognito = { path = "crates/awsim-cognito" }
awsim-core = { path = "crates/awsim-core" }
awsim-ec2 = { path = "crates/awsim-ec2" }
awsim-ecr = { path = "crates/awsim-ecr" }
awsim-ecs = { path = "crates/awsim-ecs" }
awsim-eventbridge = { path = "crates/awsim-eventbridge" }
awsim-elb = { path = "crates/awsim-elb" }
awsim-glue = { path = "crates/awsim-glue" }
awsim-dynamodb = { path = "crates/awsim-dynamodb" }
awsim-iam = { path = "crates/awsim-iam" }
awsim-iam-policy = { path = "crates/awsim-iam-policy" }
awsim-rds = { path = "crates/awsim-rds" }
awsim-kinesis = { path = "crates/awsim-kinesis" }
awsim-kms = { path = "crates/awsim-kms" }
awsim-lambda = { path = "crates/awsim-lambda" }
awsim-route53 = { path = "crates/awsim-route53" }
awsim-cloudwatch-metrics = { path = "crates/awsim-cloudwatch-metrics" }
awsim-secretsmanager = { path = "crates/awsim-secretsmanager" }
awsim-s3 = { path = "crates/awsim-s3" }
awsim-ses = { path = "crates/awsim-ses" }
awsim-sns = { path = "crates/awsim-sns" }
awsim-sqs = { path = "crates/awsim-sqs" }
awsim-ssm = { path = "crates/awsim-ssm" }
awsim-sts = { path = "crates/awsim-sts" }
awsim-stepfunctions = { path = "crates/awsim-stepfunctions" }
awsim-acm = { path = "crates/awsim-acm" }
awsim-waf = { path = "crates/awsim-waf" }
awsim-scheduler = { path = "crates/awsim-scheduler" }
awsim-comprehend = { path = "crates/awsim-comprehend" }
awsim-kendra = { path = "crates/awsim-kendra" }
awsim-opensearch = { path = "crates/awsim-opensearch" }
awsim-organizations = { path = "crates/awsim-organizations" }
awsim-cloudtrail = { path = "crates/awsim-cloudtrail" }
awsim-eks = { path = "crates/awsim-eks" }
awsim-firehose = { path = "crates/awsim-firehose" }
awsim-batch = { path = "crates/awsim-batch" }
awsim-sso-admin = { path = "crates/awsim-sso-admin" }
awsim-datasync = { path = "crates/awsim-datasync" }
awsim-polly = { path = "crates/awsim-polly" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
saphyr = "0.0.6"
quick-xml = { version = "0.37", features = ["serialize"] }
serde_urlencoded = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Concurrency
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
toml = "0.8"

# Crypto
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
base64 = "0.22"
sha2 = "0.10"
zip = "2"
rand = "0.8"

# Policy / matching
regex = "1"
ipnet = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev.package.awsim-conformance]
opt-level = 0
codegen-units = 256

[profile.release.package.awsim-conformance]
codegen-units = 16

