[package]
name = "awsim-apigateway"
description = "AWSim API Gateway v2 service emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
