[package]
name = "awsim-bedrock"
description = "AWSim Bedrock service emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
