[package]
name = "awsim-bedrock"
description = "AWSim Bedrock service emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
toml = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
