[package]
name = "awsim-chaos"
description = "Chaos injection (synthetic errors + latency) for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
