[package]
name = "awsim-cognito"
description = "AWS Cognito User Pools emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
awsim-sts = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
hkdf = { workspace = true }
