[package]
name = "awsim-core"
description = "Core framework for AWSim — gateway, routing, protocol layer, state management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
