[package]
name = "awsim-dynamodb"
description = "AWS DynamoDB emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# SQLite-backed item storage. `bundled` ships sqlite C source so we don't
# depend on the system library — important for distributable awsim builds.
# Sync API; we cross the async boundary with `tokio::task::spawn_blocking`
# at the operation handler layer.
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
refinery = { version = "0.8", features = ["rusqlite"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tempfile = "3"
tokio = { workspace = true }
