[package]
name = "awsim-dynamodb"
description = "AWS DynamoDB emulator for AWSim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
awsim-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# SQLite-backed item storage. `bundled` ships sqlite C source so we don't
# depend on the system library — important for distributable awsim builds.
# Sync API; we cross the async boundary with `tokio::task::spawn_blocking`
# at the operation handler layer.
rusqlite = { workspace = true }
refinery = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
